# gdble

./: .dockerignore  CLAUDE.md  Cargo.toml  Containerfile  README.md  bluedot.jpg.import  build.bat  build.sh  build_android.ps1  example.gd.uid
.github/workflows/: ci.yml
addons/gdble/: gdble.gdextension.uid  icon.png.import  plugin.gd.uid
src/: ble_device.rs  gdble.rs
