[package]
name = "gdble"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
btleplug = "0.11.8"
tokio = { version = "1.48.0", features = ["full"] }
uuid = "1.18.1"
futures = "0.3"

# [profile.dev]
# opt-level = 1

# [profile.release]
# opt-level = 3
# lto = true
